Glitch Small Device Updates

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <div class="row sec-middle">
       <div class="col-8">
-        <p>Let’s build experimental tools <br> for <span class="hidden" id="nameChange">word</span>, togeather.</p>
+        <p>Let’s build experimental tools <br> for <span class="hidden" id="nameChange">word</span>, together.</p>
       </div>
     </div>
 
