IndieCamp to TinyFactories

--- a/faq.html
+++ b/faq.html
@@ -3,14 +3,18 @@
 
 <head>
   <meta charset="utf-8">
-  <title>indie camp</title>
-  <meta name="description" content="Indie Camp is aimed at helping people ship small scale indie products. A group of people will gather for a few months, during which we will work inter-dependently to focus on prototyping, shipping, selling, and marketing experimental products.">
+  <title>FAQ</title>
+  <meta name="description" content="Tiny Factories is a group of indie makers helping each other to ship products.">
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
+
+  
   <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="icon" type="image/png" href="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2Ffavicon-32x32.png?1556995624178">
 </head>
 
 <body>
@@ -19,8 +23,8 @@
       <nav class="col-12">
         <ul>
           <li>
-            <a href="/"><img style="vertical-align:middle" src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2FindieCamp.svg?1550274848219" width="30" height="30" class="d-inline-block align-top" alt=""></a> </li>
-          <li><a href="/">Indie Camp</a></li>
+            <a href="/"><img style="vertical-align:middle" src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2Ffactory_emoji.png?1556992370656" width="60" height="60" class="d-inline-block align-top" alt=""></a> </li>
+        <!--   <li><a href="/">Indie Camp</a></li> -->
           <li style="float:right"><a href="faq.html">FAQ</a></li>
 <!--           <li style="float:right"><a href="apply.html">Apply</a></li> -->
         </ul>
@@ -35,11 +39,22 @@
     <div class="row sec-faq">
       <div class="col-12">
         <h4>Who is this for?</h4>
-        <p>Anyone that is interested in owning their creative freedom and gaining financial independence, through making and profiting from novel and helpful products and tools.</p>
+        <p>Designers, coders and artists who are interested in owning their creative freedom and gaining financial independence by shipping products.</p>
         <br>
-         <h4>Can I apply as an individual or pair, or a team? </h4>
-        <p>Yes! we encourage small teams (less then 3 people) to apply. </p>
+        <h4>What do you mean by product? </h4>
+        <p> It can be quite broad: from board games to web tools to support creativity.<br> In short, anything that you can sell!</p>
         <br>
+        <h4>Who is behind this? </h4>
+        <p> Currently the main people conspiring this is <a href="https://twitter.com/speculatvglitch?lang=en">Weiwei</a>, <a href="https://twitter.com/gndclouds?lang=en">William</a>, and <a href="https://twitter.com/kihara_man?lang=en">Tomo</a>. </p>
+        <br>
+        <h4>Why did you start?</h4>
+        <p>We ourselves are trying to transition into launching indie products full-time and thought it would be interesting to join forces! More about why we started, read our upcoming blog posts.</p>
+        <br>
+        <h4>More questions?</h4>
+        <p>You can just email us from this <a href="mailto:monij.hsu-AT-gmail.com">link</a>.</p>
+        <br>
+
+
 <!--         <h3>What's the range of products that will be made at indie camp?</h3>
         <p>The product can be in any genre spanning from 3D products, web services, games and  books about cats.</p>
         <br>
