🚇🎏 Updated with Glitch - added TimeGarden, Postcards, tinyText, and updated images to also be links

--- a/projects.html
+++ b/projects.html
@@ -36,33 +36,66 @@
 
     <div class="row sec-proj">
       <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+        <a style="text-decoration:none;" href="http://www.streetdebater.com/">
         <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2Fe6285e80-2aea-4b1b-804c-fb55c5339665-A_gear.png?1558421046657" alt="">
-        <a style="text-decoration:none;" href="http://www.streetdebater.com/"><h4>Street Debater</h4></a>
+        <h4>Street Debater</h4></a>
         <p>Scale to create discussions and income on the street.</p>
         <br>
       </div>
       <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+        <a style="text-decoration:none;" href="https://www.kickstarter.com/projects/1324099197/quickstarterbbcube-a-shouting-game-for-civilized-p?ref=nav_search&result=project&term=BBCubes">
         <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2F07129d2407f3761d1e41d0c9c4178dec_original.png?1558421040688" alt="">
-        <a style="text-decoration:none;" href="https://www.kickstarter.com/projects/1324099197/quickstarterbbcube-a-shouting-game-for-civilized-p?ref=nav_search&result=project&term=BBCubes"><h4>BBCube</h4></a>
+        <h4>BBCube</h4></a>
         <p>A collaborative tabletop game made for parties of all sizes.</p>
         <br>
       </div>
       <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+        <a style="text-decoration:none;" href="https://www.tomokihara.com/en/code-lab.html">
         <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2Fviolence_075x.png?1558457349118" alt="">
-        <a style="text-decoration:none;" href="https://www.tomokihara.com/en/code-lab.html"><h4>Is this Violence?</h4></a>
+        <h4>Is this Violence?</h4></a>
         <p>Game to question violence in the eye of machines.</p>
         <br>
       </div>
       <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+        <a style="text-decoration:none;" href="https://blog.usejournal.com/behind-ccas-unofficial-mascot-da63d68f15c">
         <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2FBFFFBCC5-8761-4DEC-AFBA-9768242D6B87.png?1558808815108" alt="">
-        <a style="text-decoration:none;" href="https://blog.usejournal.com/behind-ccas-unofficial-mascot-da63d68f15c"><h4>Max CCA</h4></a>
+        <h4>Max CCA</h4></a>
         <p>An unofficial college mascot and online community.</p>
         <br>
       </div>
       <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+      <a style="text-decoration:none;" href="http://weiweihsu.com/2019-02-20/becoming-courageous-together">
         <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2FD80F2FBA-3403-4668-9DDC-DCC6672CE5AA.png?1558809098928" alt="">
-        <a style="text-decoration:none;" href="http://weiweihsu.com/2019-02-20/becoming-courageous-together"><h4>Secret Project Taiwan</h4></a>
+        <h4>Secret Project Taiwan</h4></a>
         <p>A workshop about thinking wrong in life. <a href="https://www.youtube.com/playlist?list=PLn0IR8SPvGI-ZqkvjmYBi4vz2rWo0ch8v">(video)</a></p>
+        <br>
+    </div>
+<!--     <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+       <a style="text-decoration:none;" href="//https://ooak.space">
+        <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2FD80F2FBA-3403-4668-9DDC-DCC6672CE5AA.png?1558809098928" alt="">
+        <h4>OOAK</h4></a>
+        <p>One of a kind objects crafted by human and machine.</p>
+        <br>
+    </div> -->
+    <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+     <a style="text-decoration:none;" href="https://www.kickstarter.com/projects/weiweihsu/break-kickstarter-cyano-postcard?ref=user_menu">
+        <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2FD0BD3F1E-0477-49E9-8311-AD5C18D2F688.jpeg?v=1563562457612" alt="">
+        <h4>Cyano 🌊 Postcards</h4></a>
+        <p>Pour water over postcard to reveal cyan-blue patterns.</p>
+        <br>
+    </div>
+    <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+        <a style="text-decoration:none;" href="https://weiweihsu.typeform.com/to/GwiV0H">
+          <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2FAFB0DFB1-1014-40E2-A098-390BF322F8A2.jpeg?v=1563562392763" alt="">
+          <h4>Time Garden</h4></a>
+        <p>Fight procrastination by reflecting how you spend time.</p>
+        <br>
+    </div>
+    <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+        <a style="text-decoration:none;" href="https://tiny-factories.typeform.com/to/FHAxDN">
+          <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2FC75A53F0-00C3-4D8F-8DA9-7595BBF4693E.png?v=1563562399012" alt="tinyText Hero image of a phone recieving a tinyText">
+          <h4>tinyText</h4></a>
+        <p>A bi-weekly article via sms, on topics of your choice.</p>
         <br>
     </div>
     </div>
