🌊🌏 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <div class="row sec-middle">
       <div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-6">
-        <h3>Let’s build experimental products <br> for <span class="hidden" id="nameChange">word</span>, together.</h3>
+        <h3>Let’s build experimental products together.</h3>
       </div>
 
     
