--- a/projects.html
+++ b/projects.html
@@ -70,13 +70,20 @@
         <p>A workshop about thinking wrong in life. <a href="https://www.youtube.com/playlist?list=PLn0IR8SPvGI-ZqkvjmYBi4vz2rWo0ch8v">(video)</a></p>
         <br>
     </div>
-<!--     <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+     <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
        <a style="text-decoration:none;" href="//https://ooak.space">
         <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2FD80F2FBA-3403-4668-9DDC-DCC6672CE5AA.png?1558809098928" alt="">
         <h4>OOAK</h4></a>
         <p>One of a kind objects crafted by human and machine.</p>
         <br>
-    </div> -->
+    </div>
+                                                                                                                                              <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+       <a style="text-decoration:none;" href="//https://ooak.space">
+        <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2FD80F2FBA-3403-4668-9DDC-DCC6672CE5AA.png?1558809098928" alt="">
+        <h4>Indiepreneur Wiki</h4></a>
+        <p>A wiki for .</p>
+        <br>
+    </div>
     <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
      <a style="text-decoration:none;" href="https://www.kickstarter.com/projects/weiweihsu/break-kickstarter-cyano-postcard?ref=user_menu">
         <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2FD0BD3F1E-0477-49E9-8311-AD5C18D2F688.jpeg?v=1563562457612" alt="">
