--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="col-612 col-xs-12 col-sm-12 col-md-8 col-lg-8">
 
         <h2>Camp together to ship a product every month</h2>
-        <p>We host a makeathon style camp to ship a product every 30 days for the duration of 3~9 month traveling across several cities around the world. During this period we will live together in the same house to work interdependently to focus on prototyping, shipping, selling, and marketing experimental products. <br> <br> Our first camp is self-funded. To encourage collaboration, we will agree on sharing revenue for the products shipped during the camp until it compensates everyone's living expenses made in the camp. The first camp is planned to start from September 2019 in San Francisco.  </p>
+        <p>We host a makeathon style camp to ship a product every 30 days for the duration of 3~9 month traveling across several cities around the world. During this period we will live together in the same house to work interdependently to focus on prototyping, shipping, selling, and marketing experimental products. <br> <br> Our first camp is self-funded. To encourage collaboration, we will agree on sharing revenue for the products shipped during the camp until it compensates everyone's living expenses made in the camp. The first camp will start from September 2019 in San Francisco.  </p>
         <br> <br> <br> <br>
         <h2>Get feedback from the online community.</h2>
         <p>From seeking advice on launching a successful Kickstarter campaign, sourcing manufacturers, to building a following — we are committed to helping each other out! 
