😘⛑ Updated opencall page

--- a/opencall.html
+++ b/opencall.html
@@ -12,7 +12,7 @@
 </head>
 
 
-<body onclick="window.location.href='https://tinyfactories.space/';" style="cursor:pointer; width:100%; height:100%;">
+<body onclick="window.location.href='index.html#ApplyNow';" style="cursor:pointer; width:100%; height:100%;">
 
 
     <section class="intro">
