🛫🎱 Updated the opencall metatag

--- a/opencall.html
+++ b/opencall.html
@@ -3,8 +3,8 @@
   <head>
         <title>Open Call Tiny Factories</title>
         <link rel="stylesheet" href="/opencall_style.css" >
-        <meta property="og:title" content="Open Call Tiny Factories" />
-        <meta property="og:description" content="Open Call for San Francisco Camp" />
+        <meta property="og:title" content="Tiny Factories - Open Call " />
+        <meta property="og:description" content="Join the San Francisco camp in September to live together with other makers to ship a product in a month! " />
         <meta property="og:url" content="https://tinyfactories.space/opencall" />
         <meta property="og:image" content="https://raw.githubusercontent.com/kihapper/scrolling_UI/master/thumbnail_call.png" />
         <link rel="icon" type="image/png" href="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2Ffavicon-32x32.png?1556995624178">
