--- a/faq.html
+++ b/faq.html
@@ -50,7 +50,7 @@
         <p>You can just email us from this <a href="mailto:monij.hsu@gmail.com">link</a>.</p>
         <br>
         <h4>Why did you start?</h4>
-        <p>We ourselves are trying to transition into launching indie products full-time and thought it would be interesting to join forces! More about why we started, read our blog posts <a href="https://medium.com/tiny-factories">here</a> .</p>
+        <p>We ourselves are trying to transition into launching indie products full-time and thought it would be interesting to join forces! More about why we started, read our blog posts <a href="https://medium.com/tiny-factories">here</a>.</p>
         <br>
          <h4>What’s the revenue sharing model for Tiny Factories?</h4>
         <p>Our first camp is self-funded. To encourage collaboration, we will agree on sharing revenue for the products shipped during the camp until it compensates everyone's living expenses made in the camp.
@@ -59,10 +59,10 @@
         </p>
         <br>
         <h4>How can I join? </h4>
-        <p>We will get in touch with you shortly after you apply via this <a href="https://ohdotzero.typeform.com/to/OKmA3k">form</a>. Disclaimer: we are currently figuring this out as we go, so we can’t guarantee that we can invite everyone who apply in the next few months. </p>
+        <p>We will get in touch with you shortly after you apply via this <a href="https://ohdotzero.typeform.com/to/OKmA3k">form</a>. Disclaimer: we are currently figuring this out as we go! </p>
         <br>
         <h4>How can I follow-along? </h4>
-        <p>You can subscribe to our newsletter <a href="https://camp.us20.list-manage.com/subscribe/post?u=46af769d909161af00534514a&id=46c661d0ff">here</a>. We will share out updates as we we progress. </p>
+        <p>You can subscribe to our newsletter <a href="https://camp.us20.list-manage.com/subscribe/post?u=46af769d909161af00534514a&id=46c661d0ff">here</a>. We will share out updates as we progress. </p>
         <br>
 
 
