--- a/projects.html
+++ b/projects.html
@@ -105,6 +105,13 @@
         <p>A bi-weekly article via sms, on topics of your choice.</p>
         <br>
     </div>
+        <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+        <a style="text-decoration:none;" href="https://www.frienda.space">
+          <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2Ffrienda%20metatag.jpeg?v=1566601857682" alt=" You can now share the secret with legal protection!">
+          <h4>frieNDA</h4></a>
+        <p>Ever wanted to share a confidential secret? Now you can!</p>
+        <br>
+    </div>
     </div>
     
     
