🐂🚐 Updated typeform and added animal text

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <p>From seeking advice on launching a successful Kickstarter campaign, sourcing manufacturers, to building a following — we are committed to helping each other out! 
         </p>
         <br><br>
-         <p>→ Interested? Join via <a style="color:#9b9b9b;" href="https://ohdotzero.typeform.com/to/OKmA3k">this form</a>.</p>
+         <p>→ Interested? Join via <a style="color:#9b9b9b;" href="https://tiny-factories.typeform.com/to/hotpAx">this form</a>.</p>
       </div>
      
     </div>
