--- a/projects.html
+++ b/projects.html
@@ -102,7 +102,7 @@
         <a style="text-decoration:none;" href="https://tiny-factories.typeform.com/to/FHAxDN">
           <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2FC75A53F0-00C3-4D8F-8DA9-7595BBF4693E.png?v=1563562399012" alt="tinyText Hero image of a phone recieving a tinyText">
           <h4>tinyText</h4></a>
-        <p>A bi-weekly article via sms, on topics of your choice.</p>
+        <p>A weekly article via sms, on topics of your choice.</p>
         <br>
     </div>
         <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
@@ -110,6 +110,13 @@
           <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2Ffrienda%20metatag.jpeg?v=1566601857682" alt=" You can now share the secret with legal protection!">
           <h4>frieNDA</h4></a>
         <p>Ever wanted to share a confidential secret? Now you can!</p>
+        <br>
+    </div>
+      <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+        <a style="text-decoration:none;" href="https://animaltext.space">
+          <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2Fmeta%20tag.png?v=1567639330110" alt=" You can now share the secret with legal protection!">
+          <h4>Animal Text</h4></a>
+        <p>Get a cute animal text on a random day (▰˘◡˘▰)</p>
         <br>
     </div>
     </div>
