🏞💿 Updated coverimage for arena2slides

--- a/projects.html
+++ b/projects.html
@@ -114,9 +114,16 @@
     </div>
       <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
         <a style="text-decoration:none;" href="https://animaltext.space">
-          <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2Fmeta%20tag.png?v=1567639330110" alt=" You can now share the secret with legal protection!">
+          <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2Fmeta%20tag.png?v=1567639330110" alt="Get a Text of a cute animal">
           <h4>Animal Text</h4></a>
         <p>Get a cute animal text on a random day (▰˘◡˘▰)</p>
+        <br>
+    </div>
+      <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+        <a style="text-decoration:none;" href="https://arena2slides.herokuapp.com">
+          <img src="hhttps://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2Fexplanation.png?v=1568275412122" alt="Create a slide show from an are.na collection">
+          <h4>arena2slide</h4></a>
+        <p>Convert your are.na channel into a slideshow to share!</p>
         <br>
     </div>
     </div>
