🏪🐘 Fixed broken image link and typeform url

--- a/projects.html
+++ b/projects.html
@@ -121,7 +121,7 @@
     </div>
       <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
         <a style="text-decoration:none;" href="https://arena2slides.herokuapp.com">
-          <img src="hhttps://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2Fexplanation.png?v=1568275412122" alt="Create a slide show from an are.na collection">
+          <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2Fexplanation.png?v=1568275412122" alt="Create a slide show from an are.na collection">
           <h4>arena2slide</h4></a>
         <p>Convert your are.na channel into a slideshow to share!</p>
         <br>
@@ -147,7 +147,7 @@
       
       <div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-6">
          <h3>Interested in joining the tribe?</h3>
-         <p>→ Join via <a style="color:#9b9b9b;" href="https://ohdotzero.typeform.com/to/OKmA3k">this form</a></p> 
+         <p>→ Join via <a style="color:#9b9b9b;" href="https://tiny-factories.typeform.com/to/hotpAx">this form</a></p> 
         </p>
 
       </div>
