🎎🚴 Updated email newsletter link

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         
         <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
         <h3>Get updates on what we are up to?</h3>
-          <p>→ Subscribe to the <a style="color:#9b9b9b;" href="https://camp.us20.list-manage.com/subscribe/post?u=46af769d909161af00534514a&amp;id=46c661d0ff">newsletter</a></p>
+          <p>→ Subscribe to the <a style="color:#9b9b9b;" href="https://tinyletter.com/tiny_factories">newsletter</a></p>
         
       </div>
     </div>
