--- a/faq.html
+++ b/faq.html
@@ -62,7 +62,7 @@
         <p>We will get in touch with you shortly after you apply via this <a href="https://ohdotzero.typeform.com/to/OKmA3k">form</a>. Disclaimer: we are currently figuring this out as we go! </p>
         <br>
         <h4>How can I follow-along? </h4>
-        <p>You can subscribe to our newsletter <a href="https://camp.us20.list-manage.com/subscribe/post?u=46af769d909161af00534514a&id=46c661d0ff">here</a>. We will share out updates as we progress. </p>
+        <p>You can subscribe to our newsletter <a href="https://tinyletter.com/tiny_factories">here</a>. We will share out updates as we progress. </p>
         <br>
 
 
