🍪🏡 Updated typeform FAQ link

--- a/faq.html
+++ b/faq.html
@@ -59,7 +59,7 @@
         </p>
         <br>
         <h4>How can I join? </h4>
-        <p>We will get in touch with you shortly after you apply via this <a href="https://ohdotzero.typeform.com/to/OKmA3k">form</a>. Disclaimer: we are currently figuring this out as we go! </p>
+        <p>We will get in touch with you shortly after you apply via this <a href="https://tiny-factories.typeform.com/to/hotpAx">form</a>. Disclaimer: we are currently figuring this out as we go! </p>
         <br>
         <h4>How can I follow-along? </h4>
         <p>You can subscribe to our newsletter <a href="https://tinyletter.com/tiny_factories">here</a>. We will share out updates as we progress. </p>
