📉🐌 Updated Animal Text video link

--- a/projects.html
+++ b/projects.html
@@ -100,7 +100,7 @@
     </div>
       <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
         <a style="text-decoration:none;" href="https://animaltext.space">
-          <img src="http://www.animaltext.space" alt="Get a Text of a cute animal">
+          <img src="https://cdn.glitch.com/09bac3b3-b27e-482c-9203-06d39a2883ff%2Fmeta%20tag.png?v=1567637521576" alt="Get a Text of a cute animal">
           <h4>Animal Text</h4></a>
         <p>Get a cute animal text on a random day (▰˘◡˘▰)</p>
         <br>
