👔🌏 Updated with team members

--- a/faq.html
+++ b/faq.html
@@ -44,7 +44,7 @@
         <p> It can be quite broad: from board games to web tools to things that support creativity.<br> In short, anything that you can sell!</p>
         <br>
         <h4>Who is behind this? </h4>
-        <p> Currently the main people conspiring this is <a href="https://twitter.com/speculatvglitch?lang=en">Weiwei</a>, <a href="https://twitter.com/gndclouds?lang=en">William</a>, and <a href="https://twitter.com/TomoKihara?lang=en">Tomo</a>. </p>
+        <p> Currently the main people conspiring this is <a href="https://twitter.com/speculatvglitch?lang=en">Weiwei</a>, <a href="https://twitter.com/gndclouds?lang=en">Will</a>, and <a href="https://twitter.com/TomoKihara?lang=en">Tomo</a>. </p>
         <br>
         <h4>More questions</h4>
         <p>You can just email us from this <a href="mailto:monij.hsu@gmail.com">link</a>.</p>
