--- a/projects.html
+++ b/projects.html
@@ -112,6 +112,41 @@
         <p>Convert your are.na channel into a slideshow to share!</p>
         <br>
     </div>
+      <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+        <a style="text-decoration:none;" href="https://www.figma.com/community/file/814791862352902483">
+          <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2F9ECC1466-C2D4-418E-A6B6-089A22E1A560.png?v=1583353536572" alt="Create a slide show from an are.na collection">
+          <h4>Tinyspace Profiles</h4></a>
+        <p>A playground in Figma for everyone to design a personal profile using Figma components.</p>
+        <br>
+    </div>
+      <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+        <a style="text-decoration:none;" href="https://easychinese.space">
+          <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2F6b2dd90f-c5a0-4948-b837-75f0ef4ef5b7_open%20graph.png?v=1583338511671" alt="Create a slide show from an are.na collection">
+          <h4>EasyChinese</h4></a>
+        <p>A carefully curated, fun, and pretty flashcards to accelerate your chinese learning from scratch.</p>
+        <br>
+    </div>
+      <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+        <a style="text-decoration:none;" href="https://decompose-to-frames.glitch.me">
+          <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2F74297EF1-443A-40D7-AA10-72504E306392.png?v=1583348125265" alt="Create a slide show from an are.na collection">
+          <h4>Frame by frame</h4></a>
+        <p>View the individual frames to debug your animations or learn from the cosmos.</p>
+        <br>
+    </div>
+      <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+        <a style="text-decoration:none;" href="https://sheet2slide.glitch.me">
+          <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2FCBD1A41E-7714-48DE-B9D1-A40DC62E33BF.png?v=1583348461710" alt="Create a slide show from an are.na collection">
+          <h4>sheet2slide</h4></a>
+        <p>Turn a Google Sheet into a slide show.</p>
+        <br>
+    </div>
+      <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+        <a style="text-decoration:none;" href="https://sheet2news.glitch.me">
+          <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2F1A8604C4-2FC8-4076-B3EA-B2D4FB37D42A.png?v=1583348463835" alt="Create a slide show from an are.na collection">
+          <h4>sheet2news</h4></a>
+        <p>Use Google Sheet to post updates to you blog.</p>
+        <br>
+    </div>
   </div>
     
     
