🏪🌘 added moshimoshi and mask proj

--- a/projects.html
+++ b/projects.html
@@ -56,20 +56,6 @@
         <p>Game to question violence in the eye of machines.</p>
         <br>
       </div>
-      <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
-        <a style="text-decoration:none;" href="https://blog.usejournal.com/behind-ccas-unofficial-mascot-da63d68f15c">
-        <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2FBFFFBCC5-8761-4DEC-AFBA-9768242D6B87.png?1558808815108" alt="">
-        <h4>Max CCA</h4></a>
-        <p>An unofficial college mascot and online community.</p>
-        <br>
-      </div>
-      <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
-      <a style="text-decoration:none;" href="http://weiweihsu.com/2019-02-20/becoming-courageous-together">
-        <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2FD80F2FBA-3403-4668-9DDC-DCC6672CE5AA.png?1558809098928" alt="">
-        <h4>Secret Project Taiwan</h4></a>
-        <p>A workshop about thinking wrong in life. <a href="https://www.youtube.com/playlist?list=PLn0IR8SPvGI-ZqkvjmYBi4vz2rWo0ch8v">(video)</a></p>
-        <br>
-    </div>
     <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
      <a style="text-decoration:none;" href="https://www.kickstarter.com/projects/weiweihsu/break-kickstarter-cyano-postcard?ref=user_menu">
         <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2FD0BD3F1E-0477-49E9-8311-AD5C18D2F688.jpeg?v=1563562457612" alt="">
@@ -145,6 +131,20 @@
           <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2F1A8604C4-2FC8-4076-B3EA-B2D4FB37D42A.png?v=1583348463835" alt="Create a slide show from an are.na collection">
           <h4>sheet2news</h4></a>
         <p>Use Google Sheet to post updates to you blog.</p>
+        <br>
+    </div>
+       <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+        <a style="text-decoration:none;" href="https://socialdistancing.works">
+        <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2FFinal%20meta%20tag.png?v=1584577653145" alt="">
+        <h4>Social Distancing Works</h4></a>
+        <p>Encourage your friends to self-quarantine. Put a mask on your profile pic</p>
+        <br>
+      </div>
+      <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+      <a style="text-decoration:none;" href="https://moshimoshi.chat">
+        <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2Fmoshi%20moshi.png?v=1588761036481" alt="">
+        <h4>Moshi Moshi Chat</h4></a>
+        <p>A message board that disappears every 24hrs</p>
         <br>
     </div>
   </div>
