🍞⛪️ Updated with Easy Units

--- a/projects.html
+++ b/projects.html
@@ -147,6 +147,13 @@
         <p>A message board that disappears every 24hrs</p>
         <br>
     </div>
+      <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+         <a style="text-decoration:none;" href="https://tinytools.space">
+        <img src="https://cdn.glitch.com/e6285e80-2aea-4b1b-804c-fb55c5339665%2Fmeta%20tag.png?v=1589671711779" alt="">
+        <h4>Easy Units for Figma</h4></a>
+        <p>The only unit converter for Figma</p>
+        <br>
+    </div>
   </div>
     
     
